# uptrader-test

./: .gitignore  README.md  docker-compose.yml
nginx/: default.conf
project/: .flake8  Dockerfile  Makefile  entrypoint.sh  env  pyproject.toml  requirements.txt
project/src/: manage.py
project/src/apps/menu/: admin.py  models.py
project/src/apps/menu/templatetags/: menu_tags.py
project/src/core/: urls.py
project/src/core/settings/: __init__.py  common.py  database.py  logging.py
project/src/templates/: base.html
project/src/templates/pages/: index.html
